--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -2,7 +2,7 @@ NAME		= phonebook
 CC			= c++
 CFLAGS		= -Wall -Wextra -Werror -std=c++98
 
-SRCS		= PhoneBook.hpp PhoneBook.cpp Contact.hpp Contact.cpp
+SRCS		= main.cpp PhoneBook.cpp Contact.cpp
 OBJS		= $(SRCS:.cpp=.o)
 
 all:		$(NAME)
