--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,6 +1,6 @@
 NAME		= phonebook
 CC			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CFLAGS		= -Wall -Wextra -Werror -std=c++98 -g3
 
 SRCS		= main.cpp PhoneBook.cpp Contact.cpp
 OBJS		= $(SRCS:.cpp=.o)
