--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME		= ClapTrap
 CC			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CFLAGS		= -Wall -Wextra -Werror
 
 SRCS		= main.cpp ClapTrap.cpp
 OBJS		= $(SRCS:.cpp=.o)
