--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME		= animals
 CC			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CFLAGS		= -Wall -Wextra -Werror
 
 SRCS		= main.cpp Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp
 OBJS		= $(SRCS:.cpp=.o)
