--- a/cpp04/ex01/Makefile
+++ b/cpp04/ex01/Makefile
@@ -1,6 +1,6 @@
 NAME		= animals
 CC			= c++
-CFLAGS		= -Wall -Wextra -Werror
+CFLAGS		= -Wall -Wextra -Werror -std=c++17
 
 SRCS		= main.cpp Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp Brain.cpp
 OBJS		= $(SRCS:.cpp=.o)
